Fix on QR action alignment

--- a/public/css/sass/style.scss
+++ b/public/css/sass/style.scss
@@ -3880,7 +3880,7 @@ section.modified.editor .status {
     }
 
     .cattool #quality-report {
-        padding: 5px 5px !important;
+        padding: 0 !important;
     }
 
     .header-menu li a, .header-menu li input {
